tests/vdq-rta/should_fail/T24159_pat_parse_error_3.hs
{-# LANGUAGE RequiredTypeArguments, LinearTypes, UnicodeSyntax #-}
module T24159_pat_parse_error_3 where

f (a ⊸ b) = ()
